
Project simpo {
    database_type: "PostgreSQL"
    Note: '''
        Simpo bank database
    '''
}

Table users as U {
  username varchar [pk]
  full_name varchar [not null]
  hashed_password varchar [not null]
  email varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  client_ip varchar [not null]
  user_agent varchar [not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table verify_emails {
  id bigserial pk
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [unique, not null]
  is_used bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01']
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default:`now()`]

  Indexes {
    owner
    (owner, currency)
  }
}

// If schema name is omitted, it will default to "public" schema.
Table entries {
  id bigserial [pk] // auto-increment
  account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestamptz [not null, default:`now()`]

  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [not null, default:`now()`]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

